--- a/ToDoList/style.css
+++ b/ToDoList/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +18,8 @@ form{
     display: flex;
     justify-content: center;
     align-items:center ;
+
+    
 }
 
 
@@ -33,11 +36,14 @@ form button{
     background:white;
     cursor: pointer;
     transition: all 0.3s ease;
+    
+    
 }
 
 form button:hover{
     background:#ebc139;
     color: white;
+    
 }
 
 .todo-container {
@@ -58,6 +64,7 @@ form button:hover{
     justify-content: space-between;
     align-items: center;
     transition: all 0.5s ease;
+
 }
 
 .todo li{
@@ -71,6 +78,7 @@ form button:hover{
     padding: 1rem;
     cursor: pointer;
     font-size: 1rem;
+    
 }
 
 .complete-btn{
@@ -99,20 +107,25 @@ select{
     appearance: none;
     outline: none;
     border: none;
+    
 }
 
 .select{
     margin: 1rem;
     position: relative;
     overflow: hidden;
+    
 }
 select{
     color: #f356de ;
     width: 10rem;
     cursor: pointer;
     padding: 1rem;
+    
+
 }
 .select::after{
+   
     content:"\25BC";
     position: absolute;
     background: #f356de;
@@ -121,16 +134,32 @@ select{
     padding: 1rem;
     pointer-events: none;
     transition: all 0.3s ease;
+    
+    
 }
 .select:hover::after{
     background: white;
     color: #ebc139;
 }
 
+.filter-todo{
+    font-weight: bolder;
+    font-size: small;
+    
+}
 
 
-
-
-
-
+h1{
+    color: rgb(170, 57, 214);
+    font-weight: bolder;
+    font-family: cursive;
+    font-size: 40.7px;
+    -webkit-text-stroke: 1px black;
+}
+img{
+    display: flex;
+    height: 60px;
+    margin-left: 30px;
+    
+}
 
